--- a/src/components/alerts/Alerts.css
+++ b/src/components/alerts/Alerts.css
@@ -29,6 +29,9 @@
   input[type=radio]:checked~div {
     background-color: #00a6c9;
   }
+  .boxC input:hover + div{
+    background-color: #5ad1e9;
+  }
   .yes-button {
     background-color: #bff36a;
   }
@@ -53,4 +56,40 @@
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 40px;
+  }
+
+  .form-alert {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(217, 217, 217, 0.89);
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+    z-index: 1000;
+    align-items: center;
+  }
+  
+  .centent-alert {
+    background-color: #fff;
+    border-radius: 8px;
+    width:fit-content;
+    max-width: 1023px;
+    height: fit-content;
+    padding: 0px 20px 20px 66px;
+    margin: 3%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+  
+  }
+  
+  .alert-form-title {
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 30px;
+    line-height: 1.5;
+    color: #000000;
   }
