--- a/src/components/alerts/Alerts.css
+++ b/src/components/alerts/Alerts.css
@@ -1,8 +1,9 @@
 .buttonContainer {
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    margin-bottom: 40px;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
   }
   .boxs{
     background-color: transparent;
@@ -51,11 +52,11 @@
     font-size: 45px;
   }
 
-  .yes-proceed{
+  .formInputs-proceed{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 40px;
+    margin: 0 20px 20px 0;
   }
 
   .form-alert {
@@ -78,7 +79,7 @@
     width:fit-content;
     max-width: 1023px;
     height: fit-content;
-    padding: 0px 20px 20px 66px;
+    padding: 0px 20px 20px ;
     margin: 3%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border: 1px solid black;
